--- a/src/app/routine/routine.component.scss
+++ b/src/app/routine/routine.component.scss
@@ -44,13 +44,12 @@
     &--content {
       display: flex;
       align-items: center;
-
+      max-width: 90%;
+      overflow-x: auto;
     }
 
     &--name {
       white-space: nowrap;
-      overflow-x: auto;
-      max-width: 60vw;
 
       &-icon {
         margin-right: $md;
